--- a/index.html
+++ b/index.html
@@ -6,12 +6,53 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu</title>
-  <link rel="stylesheet" href="css/reset.css" type="css/text">
-  <link rel="stylesheet" href="css/style.css" type="css/text">
+  <link rel="stylesheet" href="css/reset.css" type="text/css">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
 <body>
-  
+  <div class="container">
+    <nav class="menu">
+      <ul class="menu-list">
+        <li class="menu-item">
+          <a class="menu-link" href="#">Home</a>
+        </li>
+        <li class="menu-item menu-submenu">
+          <a class="menu-link" href="#">Products +</a>
+          <ul class="submenu">
+            <li class="subitem">
+              <a class="subitem-link subplus" href="#">Product 1</a>
+              <ul class="subitem-menu">
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 1</a>
+                </li>
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 2</a>
+                </li>
+              </ul>
+            </li>
+            <li class="subitem">
+              <a class="subitem-link subplus" href="#">Product 2</a>
+              <ul class="subitem-menu">
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 3</a>
+                </li>
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 4</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link" href="#">About</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link" href="#">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </body>
 
 </html>
