fixed previous version

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <li class="subitem">
                   <a class="subitem-link" href="#">Sub Item 2</a>
                 </li>
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 3</a>
+                </li>
               </ul>
             </li>
             <li class="subitem">
@@ -39,6 +42,46 @@
                 </li>
                 <li class="subitem">
                   <a class="subitem-link" href="#">Sub Item 4</a>
+                </li>
+              </ul>
+            </li>
+            <li class="subitem">
+              <a class="subitem-link subplus" href="#">Product 3</a>
+              <ul class="subitem-menu">
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 1</a>
+                </li>
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 2</a>
+                </li>
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 3</a>
+                </li>
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 4</a>
+                </li>
+              </ul>
+            </li>
+            <li class="subitem">
+              <a class="subitem-link subplus" href="#">Product 4</a>
+              <ul class="subitem-menu">
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 1</a>
+                </li>
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 2</a>
+                </li>
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 3</a>
+                </li>
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 4</a>
+                </li>
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 5</a>
+                </li>
+                <li class="subitem">
+                  <a class="subitem-link" href="#">Sub Item 6</a>
                 </li>
               </ul>
             </li>
