--- a/index.html
+++ b/index.html
@@ -11,90 +11,92 @@
 </head>
 
 <body>
-  <div class="container">
-    <nav class="menu">
-      <ul class="menu-list">
-        <li class="menu-item">
-          <a class="menu-link" href="#">Home</a>
-        </li>
-        <li class="menu-item menu-submenu">
-          <a class="menu-link" href="#">Products +</a>
-          <ul class="submenu">
-            <li class="subitem">
-              <a class="subitem-link subplus" href="#">Product 1</a>
-              <ul class="subitem-menu">
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 1</a>
-                </li>
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 2</a>
-                </li>
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 3</a>
-                </li>
-              </ul>
-            </li>
-            <li class="subitem">
-              <a class="subitem-link subplus" href="#">Product 2</a>
-              <ul class="subitem-menu">
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 3</a>
-                </li>
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 4</a>
-                </li>
-              </ul>
-            </li>
-            <li class="subitem">
-              <a class="subitem-link subplus" href="#">Product 3</a>
-              <ul class="subitem-menu">
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 1</a>
-                </li>
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 2</a>
-                </li>
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 3</a>
-                </li>
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 4</a>
-                </li>
-              </ul>
-            </li>
-            <li class="subitem">
-              <a class="subitem-link subplus" href="#">Product 4</a>
-              <ul class="subitem-menu">
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 1</a>
-                </li>
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 2</a>
-                </li>
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 3</a>
-                </li>
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 4</a>
-                </li>
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 5</a>
-                </li>
-                <li class="subitem">
-                  <a class="subitem-link" href="#">Sub Item 6</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">About</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">Contact</a>
-        </li>
-      </ul>
-    </nav>
+  <div class="header">
+    <div class="container">
+      <nav class="menu">
+        <ul class="menu-list">
+          <li class="menu-item">
+            <a class="menu-link" href="#">Home</a>
+          </li>
+          <li class="menu-item menu-submenu">
+            <a class="menu-link" href="#">Products +</a>
+            <ul class="submenu">
+              <li class="subitem">
+                <a class="subitem-link subplus" href="#">Product 1</a>
+                <ul class="subitem-menu">
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 1</a>
+                  </li>
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 2</a>
+                  </li>
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 3</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="subitem">
+                <a class="subitem-link subplus" href="#">Product 2</a>
+                <ul class="subitem-menu">
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 3</a>
+                  </li>
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 4</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="subitem">
+                <a class="subitem-link subplus" href="#">Product 3</a>
+                <ul class="subitem-menu">
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 1</a>
+                  </li>
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 2</a>
+                  </li>
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 3</a>
+                  </li>
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 4</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="subitem">
+                <a class="subitem-link subplus" href="#">Product 4</a>
+                <ul class="subitem-menu">
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 1</a>
+                  </li>
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 2</a>
+                  </li>
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 3</a>
+                  </li>
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 4</a>
+                  </li>
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 5</a>
+                  </li>
+                  <li class="subitem">
+                    <a class="subitem-link" href="#">Sub Item 6</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#">About</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
 </body>
 
